--- a/src/screens/usuarios/css/Formularios.module.css
+++ b/src/screens/usuarios/css/Formularios.module.css
@@ -5,13 +5,13 @@
   width: 100%;
   max-width: 500px;
   padding: 30px;
-  margin: 0 auto; 
+  margin: 0 auto;
   box-sizing: border-box;
-  border-radius: 10px; 
+  border-radius: 10px;
 }
 
 .botonatras {
-  position: fixed;
+  position: absolute;
   top: 20px;
   left: 20px;
   color: #000;
@@ -55,7 +55,6 @@
   margin-bottom: 20px;
 }
 
-
 .etiquetas {
   display: block;
   text-align: left;
@@ -79,7 +78,7 @@
   justify-content: space-between;
   width: 100%;
   max-width: 400px;
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 
 .btn1,
@@ -112,7 +111,7 @@
 }
 
 .formulario {
-  padding-right: 40px; 
+  padding-right: 40px;
 }
 
 .boton_ojito {
@@ -133,26 +132,45 @@
 .checkbox_input {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start; 
   width: 100%;
   max-width: 400px;
   margin-bottom: 20px;
-  margin-left: 5px;
-  gap: 5px; 
 }
 
-.checkbox_input input[type="checkbox"] {
-  width: 15px; 
-  height: 15px; 
+
+.checkbox_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkbox_container input[type="checkbox"] {
+  width: 15px;
+  height: 15px;
   cursor: pointer;
+  margin-right: 10px;
 }
 
-.checkbox_input label {
- padding-left: 10px;
-  padding-top: 20px;
-  font-size: 1rem; 
-  color: #000; 
-  font-weight: 300; 
+
+.elementos_label {
+  display: inline-block;
+  margin-bottom: 5px;
+  width: auto;
+  max-width: 400px;
 }
+.checkbox_input label {
+  font-size: 1rem;
+  color: #000;
+  font-weight: 300;
+}
+
+.elementos_label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+  width: 100%;
+  max-width: 400px;
+}
+
 
