--- a/src/screens/usuarios/css/Perfil_Usuario.module.css
+++ b/src/screens/usuarios/css/Perfil_Usuario.module.css
@@ -32,17 +32,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #0397fc;
+  background: #ff0000;
+  background: linear-gradient(90deg, rgba(255, 0, 0, 1) 0%, rgba(253, 175, 29, 1) 70%, rgba(249, 252, 69, 1) 100%);
   border-radius: 50%;
   width: 120px;
   height: 120px;
   margin: 20px 0;
+  padding: 5px;
 }
 
-.icono_usuario {
-  color: white;
-  font-size: 60px;
+.imgUsuario {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
 }
+
+
 
 .info {
   width: 100%;
