--- a/src/components/Footer/css/TrazadoRuta.module.css
+++ b/src/components/Footer/css/TrazadoRuta.module.css
@@ -90,10 +90,13 @@
 .ContenInfo {
     display: flex;
     align-items: center;
-    margin: 1px;
     font-size: 13px;
     text-align-last: left;
-    margin-top: 10px;
+    margin-top: 15px;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.226);
+    padding-bottom: 10px;
+    
 }
 
 .IconsClock {
@@ -101,7 +104,6 @@
     justify-content: center;
     align-items: center;
     margin-right: 10px;
-    color: gray;
 }
 
 
@@ -109,29 +111,44 @@
     background-color: #d1f7d6;
     color: #0a8a0a;
     animation: pulseActive 2s infinite;
-  }
-  
-  .desactivada {
+}
+
+.desactivada {
     background-color: #fbe1e1;
     color: #b80000;
     animation: fadeInactive 3s infinite;
-  }
-  
-  @keyframes pulseActive {
-    0% { box-shadow: 0 0 5px #4caf50; }
-    50% { box-shadow: 0 0 10px #4caf50; }
-    100% { box-shadow: 0 0 5px #4caf50; }
-  }
-  
-  @keyframes fadeInactive {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0.6; }
-  }
+}
+
+@keyframes pulseActive {
+    0% {
+        box-shadow: 0 0 5px #4caf50;
+    }
+
+    50% {
+        box-shadow: 0 0 10px #4caf50;
+    }
+
+    100% {
+        box-shadow: 0 0 5px #4caf50;
+    }
+}
+
+@keyframes fadeInactive {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.6;
+    }
+}
 
 
-  .TituloIndi{
+.TituloIndi {
     color: rgb(130, 127, 127);
     text-align: center;
     padding: 3px;
     font: 100% sans-serif;
-  }
+}
