--- a/src/screens/marcadores/css/EditarLocacion.module.css
+++ b/src/screens/marcadores/css/EditarLocacion.module.css
@@ -90,6 +90,7 @@
     font-size: 16px !important;
     color: #555;
     font-weight: 600;
+    padding-bottom: 5px;
 }
 
 .inputText {
@@ -143,7 +144,7 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     width: 100%;
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
 }
 
