--- a/src/components/css/VerMarcador.module.css
+++ b/src/components/css/VerMarcador.module.css
@@ -7,6 +7,9 @@
     background-color: white;
     height: fit-content;
     position: relative;
+    border-radius: 15px;
+    overflow: hidden;
+    border: 1px solid #ccc;
 }
 
 .container .CerrarMarcador {
@@ -31,14 +34,15 @@
 
 .headerContenido {
     padding: 25px;
+    padding-bottom: 0;
     width: 100%;
-    height: 150px;
+    height: fit-content;
     display: flex;
     margin-bottom: 20px;
 }
 
 .headerContenido .info {
-    width: 70%;
+    width: 100%;
 }
 
 .nombreVerificado {
@@ -107,6 +111,7 @@
 .ContenedorInfo {
     width: 100%;
     padding: 25px;
+    padding-top: 0;
 }
 
 .headerInfo {
@@ -172,3 +177,4 @@
 .tercerdia {
     color: #aaa5a5;
 }
+
